--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <style>
         html,body{
             height: 100%;
+            margin: 0%;
+            padding: 0%;
         }
         #hoja{
             height: 100%;
